--- a/index.html
+++ b/index.html
@@ -12,39 +12,71 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    10,000+ of our users love our products.
+    <h1>10,000+ of our users love our products.</h1>
 
-    We only provide great products combined with excellent customer service.
-    See what our satisfied customers are saying about our services.
+    <p>
+      We only provide great products combined with excellent customer service.
+      See what our satisfied customers are saying about our services.
+    </p>
 
-    Rated 5 Stars in Reviews
-    Rated 5 Stars in Report Guru
-    Rated 5 Stars in BestTech
+    <div class="rating">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <h4>Rated 5 Stars in Reviews</h4>
+    </div>
+    <div class="rating">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <h4>Rated 5 Stars in Report Guru</h4>
+    </div>
+    <div class="rating">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <img src="images/icon-star.svg">
+      <h4>Rated 5 Stars in BestTech</h4>
+    </div>
 
-    Colton Smith
-    Verified Buyer
-    "We needed the same printed design as the one we had ordered a week prior.
-    Not only did they find the original order, but we also received it in time.
-    Excellent!"
 
-    Irene Roberts
-    Verified Buyer
-    "Customer service is always excellent and very quick turn around. Completely
-    delighted with the simplicity of the purchase and the speed of delivery."
-
-    Anne Wallace
-    Verified Buyer
-    "Put an order with this company and can only praise them for the very high
-    standard. Will definitely use them again and recommend them to everyone!"
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="card">
+      <img src="images/image-colton.jpg">
+      <h5>Colton Smith</h5>
+      <h5 class="verified">Verified Buyer</h5>
+      <p>
+        "We needed the same printed design as the one we had ordered a week prior.
+      Not only did they find the original order, but we also received it in time.
+      Excellent!"
+      </p>
+    </div>
+    <div class="card">
+      <img src="images/image-irene.jpg">
+      <h5>Irene Roberts</h5>
+      <h5 class="verified">Verified Buyer</h5>
+      <p>
+        "Customer service is always excellent and very quick turn around. Completely
+      delighted with the simplicity of the purchase and the speed of delivery."
+      </p>
+    </div>
+    <div class="card">
+      <img src="images/image-anne.jpg">
+      <h5>Anne Wallace</h5>
+      <h5 class="verified">Verified Buyer</h5>
+      <p>
+        "Put an order with this company and can only praise them for the very high
+      standard. Will definitely use them again and recommend them to everyone!"
+      </p>
     </div>
   </body>
 </html>
