--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 
     <div class="card">
       <img src="images/image-colton.jpg">
-      <h5>Colton Smith</h5>
-      <h5 class="verified">Verified Buyer</h5>
+      <div class="cardheading">
+        <h4>Colton Smith</h4>
+        <h4 class="verified">Verified Buyer</h4>
+      </div>
       <p>
         "We needed the same printed design as the one we had ordered a week prior.
       Not only did they find the original order, but we also received it in time.
@@ -62,8 +64,10 @@
     </div>
     <div class="card">
       <img src="images/image-irene.jpg">
-      <h5>Irene Roberts</h5>
-      <h5 class="verified">Verified Buyer</h5>
+      <div class="cardheading">
+        <h4>Irene Roberts</h4>
+        <h4 class="verified">Verified Buyer</h4>
+      </div>
       <p>
         "Customer service is always excellent and very quick turn around. Completely
       delighted with the simplicity of the purchase and the speed of delivery."
@@ -71,8 +75,10 @@
     </div>
     <div class="card">
       <img src="images/image-anne.jpg">
-      <h5>Anne Wallace</h5>
-      <h5 class="verified">Verified Buyer</h5>
+      <div class="cardheading">
+        <h4>Anne Wallace</h4>
+        <h4 class="verified">Verified Buyer</h4>
+      </div>
       <p>
         "Put an order with this company and can only praise them for the very high
       standard. Will definitely use them again and recommend them to everyone!"
