--- a/index.html
+++ b/index.html
@@ -25,27 +25,33 @@
     </p>
 
     <div class="rating">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
+      <div class="stars">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+      </div>
       <h4>Rated 5 Stars in Reviews</h4>
     </div>
     <div class="rating">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
+      <div class="stars">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+      </div>
       <h4>Rated 5 Stars in Report Guru</h4>
     </div>
     <div class="rating">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
-      <img src="images/icon-star.svg">
+      <div class="stars">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+        <img src="images/icon-star.svg">
+      </div>
       <h4>Rated 5 Stars in BestTech</h4>
     </div>
 
