--- a/index.html
+++ b/index.html
@@ -17,46 +17,49 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    <h1>10,000+ of our users love our products.</h1>
+    <div class="text">
+      <h1>10,000+ of our users love our products.</h1>
 
-    <p>
-      We only provide great products combined with excellent customer service.
-      See what our satisfied customers are saying about our services.
-    </p>
-
-    <div class="rating">
-      <div class="stars">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-      </div>
-      <h4>Rated 5 Stars in Reviews</h4>
+      <p>
+        We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.
+      </p>
     </div>
-    <div class="rating">
-      <div class="stars">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
+    <div class="reviews">
+      <div class="rating" id="firstRating">
+        <div class="stars">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+        </div>
+        <h4>Rated 5 Stars in Reviews</h4>
       </div>
-      <h4>Rated 5 Stars in Report Guru</h4>
-    </div>
-    <div class="rating">
-      <div class="stars">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
-        <img src="images/icon-star.svg">
+      <div class="rating" id="secondRating">
+        <div class="stars">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+        </div>
+        <h4>Rated 5 Stars in Report Guru</h4>
       </div>
-      <h4>Rated 5 Stars in BestTech</h4>
-    </div>
+      <div class="rating" id="thirdRating">
+        <div class="stars">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+        </div>
+        <h4>Rated 5 Stars in BestTech</h4>
+      </div>
+  </div>
 
 
-    <div class="card">
+    <div class="card" id="Colton">
       <img src="images/image-colton.jpg">
       <div class="cardheading">
         <h4>Colton Smith</h4>
@@ -68,7 +71,7 @@
       Excellent!"
       </p>
     </div>
-    <div class="card">
+    <div class="card" id="Irene">
       <img src="images/image-irene.jpg">
       <div class="cardheading">
         <h4>Irene Roberts</h4>
@@ -79,7 +82,7 @@
       delighted with the simplicity of the purchase and the speed of delivery."
       </p>
     </div>
-    <div class="card">
+    <div class="card" id="Anne">
       <img src="images/image-anne.jpg">
       <div class="cardheading">
         <h4>Anne Wallace</h4>
